# platform-apps-forwarder

./: MANIFEST.in  pyproject.toml  setup.cfg
.github/workflows/: main.yml  master.yml
forwarder/: addonmanager.py  certs.py  command.py  connection.py  ctx.py  dns.py  eventsequence.py  flow.py  flowfilter.py  hooks.py  http.py  log.py  master.py  options.py  optmanager.py  tcp.py  tls.py  types.py  udp.py  version.py  websocket.py
forwarder/addons/: __init__.py  anticache.py  anticomp.py  asgiapp.py  block.py  blocklist.py  browser.py  clientplayback.py  command_history.py  comment.py  core.py  cut.py  dns_resolver.py  dumper.py  errorcheck.py  eventstore.py  export.py  intercept.py  keepserving.py  maplocal.py  mapremote.py  modifybody.py  modifyheaders.py  next_layer.py  onboarding.py  proxyauth.py  proxyserver.py  readfile.py  save.py  savehar.py  script.py  server_side_events.py  serverplayback.py  stickyauth.py  stickycookie.py  termlog.py  tlsconfig.py  upstream_auth.py  view.py
forwarder/addons/onboardingapp/: __init__.py
forwarder/contentviews/: __init__.py  auto.py  base.py  css.py  dns.py  graphql.py  grpc.py  hex.py  http3.py  javascript.py  json.py  mqtt.py  msgpack.py  multipart.py  protobuf.py  urlencoded.py  wbxml.py  xml_html.py
forwarder/contentviews/image/: image_parser.py  view.py
forwarder/coretypes/: multidict.py
forwarder/io/: compat.py  har.py  io.py
forwarder/net/: server_spec.py  tls.py
forwarder/net/http/: cookies.py  multipart.py  url.py
forwarder/net/http/http1/: read.py
forwarder/platform/: windows.py
forwarder/proxy/: commands.py  context.py  events.py  layer.py  mode_servers.py  mode_specs.py  server.py  server_hooks.py  tunnel.py  utils.py
forwarder/proxy/layers/: dns.py  modes.py  quic.py  tcp.py  tls.py  udp.py  websocket.py
forwarder/proxy/layers/http/: __init__.py  _base.py  _events.py  _hooks.py  _http1.py  _http2.py  _http3.py  _http_h3.py  _upstream_proxy.py
forwarder/script/: concurrent.py
forwarder/test/: taddons.py  tflow.py  tutils.py
forwarder/tools/: cmdline.py  dump.py  main.py
forwarder/tools/console/: __init__.py  commandexecutor.py  commands.py  common.py  consoleaddons.py  defaultkeys.py  eventlog.py  flowdetailview.py  flowlist.py  flowview.py  help.py  keybindings.py  keymap.py  master.py  options.py  overlay.py  quickhelp.py  searchable.py  signals.py  statusbar.py  window.py
forwarder/tools/console/commander/: commander.py
forwarder/tools/console/grideditor/: base.py  col_bytes.py  col_subgrid.py  col_text.py  col_viewany.py  editors.py
forwarder/utils/: asyncio_utils.py  debug.py  emoji.py  magisk.py  spec.py
forwarder/utils/pyinstaller/: hook-mitmproxy.py
release/: build.py  selftest.py
release/specs/: .mitmproxy-wrapper  forwarder  standalone.spec
test/: conftest.py
test/bench/: benchmark.py
test/examples/: test_examples.py
test/forwarder/: test_addonmanager.py  test_certs.py  test_command.py  test_command_lexer.py  test_connection.py  test_dns.py  test_eventsequence.py  test_flow.py  test_flowfilter.py  test_hooks.py  test_http.py  test_log.py  test_master.py  test_optmanager.py  test_proxy.py  test_taddons.py  test_tcp.py  test_tls.py  test_types.py  test_udp.py  test_version.py  test_websocket.py
test/forwarder/addons/: test_anticache.py  test_anticomp.py  test_asgiapp.py  test_block.py  test_blocklist.py  test_browser.py  test_clientplayback.py  test_command_history.py  test_comment.py  test_core.py  test_cut.py  test_disable_h2c.py  test_dns_resolver.py  test_dumper.py  test_errorcheck.py  test_eventstore.py  test_export.py  test_intercept.py  test_keepserving.py  test_maplocal.py  test_mapremote.py  test_modifybody.py  test_modifyheaders.py  test_next_layer.py  test_onboarding.py  test_proxyauth.py  test_proxyserver.py  test_readfile.py  test_save.py  test_savehar.py  test_script.py  test_server_side_events.py  test_serverplayback.py  test_stickyauth.py  test_stickycookie.py  test_termlog.py  test_tlsconfig.py  test_upstream_auth.py  test_view.py
test/forwarder/contentviews/: test_api.py  test_auto.py  test_base.py  test_css.py  test_dns.py  test_graphql.py  test_grpc.py  test_hex.py  test_http3.py  test_javascript.py  test_json.py  test_mqtt.py  test_msgpack.py  test_multipart.py  test_protobuf.py  test_query.py  test_raw.py  test_urlencoded.py  test_wbxml.py  test_xml_html.py
test/forwarder/contentviews/image/: test_image_parser.py  test_view.py
test/forwarder/coretypes/: test_bidi.py  test_multidict.py  test_serializable.py
test/forwarder/data/addonscripts/: concurrent_decorator.py  concurrent_decorator_class.py  concurrent_decorator_err.py  configure.py  shutdown.py
test/forwarder/io/: test_compat.py  test_har.py  test_io.py  test_tnetstring.py
test/forwarder/net/: test_check.py  test_encoding.py  test_local_ip.py  test_server_spec.py  test_tls.py
test/forwarder/net/dns/: test_classes.py  test_domain_names.py  test_op_codes.py  test_response_codes.py  test_types.py
test/forwarder/net/http/: test_cookies.py  test_headers.py  test_multipart.py  test_status_codes.py  test_url.py  test_user_agents.py
test/forwarder/platform/: test_pf.py
test/forwarder/proxy/: conftest.py  test_commands.py  test_context.py  test_events.py  test_layer.py  test_mode_servers.py  test_mode_specs.py  test_server_hooks.py  test_tunnel.py  test_tutils.py  test_utils.py  tutils.py
test/forwarder/proxy/layers/: test_dns.py  test_modes.py  test_quic.py  test_socks5_fuzz.py  test_tcp.py  test_tls.py  test_tls_fuzz.py  test_udp.py  test_websocket.py
test/forwarder/script/: test_concurrent.py
test/forwarder/tools/: test_cmdline.py  test_dump.py  test_main.py
test/forwarder/tools/console/: conftest.py  test_commander.py  (+8 more)
test/forwarder/utils/: test_arg_check.py  test_asyncio_utils.py  test_data.py  test_debug.py  test_emoji.py  test_human.py  test_magisk.py  test_signals.py  test_sliding_window.py  test_spec.py  test_strutils.py  test_typecheck.py  test_vt_codes.py
test/helper_tools/: dumperview.py  hunt_memory_leaks.py  inspect_dumpfile.py  memoryleak2.py
(+10 files in other folders)
